<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="14dp">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="292dp"
        android:layout_height="57dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/labelTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/temperature"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputTemperature"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/temperatureHint"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="@+id/labelTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelTemperature"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/labelConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/conversion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTemperature" />

    <TextView
        android:id="@+id/outputConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/conversionHint"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="@+id/labelConversion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelConversion" />

    <TextView
        android:id="@+id/labelSelectConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/selectConversion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outputConversion" />

    <RadioGroup
        android:id="@+id/radioGroupConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSelectConversion">

        <RadioButton
            android:id="@+id/radioButtonCtoF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_to_f" />

        <RadioButton
            android:id="@+id/radioButtonFtoC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_to_c" />

    </RadioGroup>


    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toStartOf="@id/buttonCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupConversion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.48"
        android:stateListAnimator="@null"
        android:layout_marginEnd="4dp"
        android:padding="16dp"
        app:cornerRadius="0dp"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonReset"
        app:layout_constraintTop_toBottomOf="@id/radioGroupConversion"
        app:layout_constraintWidth_percent="0.48"
        android:stateListAnimator="@null"
        android:layout_marginStart="4dp"
        android:padding="16dp"
        app:cornerRadius="0dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>